test/tests/operators/to_google_secops/invalid_api.txt
error: `api` must be one of `import` or `ingestion`
 --> tests/operators/to_google_secops/invalid_api.tql:6:37
  |
6 | to_google_secops _dry_run=true, api="legacy", log_type="CUSTOM_DNS",
  |                                     ^^^^^^^^ 
  |
